# modmex-lambda

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
modmex_lambda/: __init__.py  dependencies.py  event_sources.py  exceptions.py  logging.py  params.py  parser.py  request.py  resolver.py  response.py  routing.py  tracing.py  validation.py
modmex_lambda/ai/: __init__.py  dynamodb.py
modmex_lambda/connectors/: __init__.py  cloudwatch.py  dynamodb.py  eventbridge.py  eventbridge_scheduler.py  icloudwatch.py  idynamodb.py  ieventbridge.py  ieventbridge_scheduler.py  ilambda.py  is3.py  isns.py  isqs.py  lambda_.py  module.py  s3.py  sns.py  sqs.py
modmex_lambda/data_classes/: __init__.py  api_gateway_authorizer_event.py  api_gateway_proxy_event.py  api_gateway_websocket_event.py  cognito_user_pool_event.py  common.py
modmex_lambda/event_handler/: __init__.py  api_gateway.py  constants.py  content_types.py  cors.py  exception_handler.py  exceptions.py  gateway_response.py  middlewares.py  params.py  request.py  response.py  routing.py  routing_fallbacks.py  types.py
modmex_lambda/persistence/: __init__.py
modmex_lambda/shared/: cookies.py  headers_serializer.py  json_encoder.py  types.py
modmex_lambda/stream/: __init__.py  irules_registry.py  rules_registry.py  runner.py  schedulers.py
tests/: conftest.py  test_lazy_imports.py  test_logging.py  test_parser_event_sources.py  test_reexports.py  test_tracing.py  test_validation.py
tests/ai/: test_dynamodb.py
tests/connectors/: conftest.py  test_cloudwatch.py  test_dynamodb.py  test_lazy_clients.py  test_s3.py  test_simple_connectors.py  test_sns.py  test_sqs.py
tests/data_classes/: test_api_gateway_proxy_event.py  test_cognito_user_pool_event.py  test_common.py
tests/event_handler/: test_api_gateway.py  test_cors.py  test_dependencies.py  test_exception_handler.py  test_gateway_response.py  test_request.py  test_response.py  test_routing.py
tests/persistence/: test_dynamodb_expressions.py  test_dynamodb_keys.py  test_dynamodb_materialized_views.py  (+1 more)
tests/stream/: conftest.py  (+6 more)
(+111 files in other folders)
